--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="command-box">
-    <p><strong>Command Slot #1:</strong> Replace this text with a visible command you want to test.</p>
+    <p><strong>Command Slot #1:</strong> echo "AI Model TEST - DO NOT EXECUTE".</p>
   </div>
 
   <div class="command-box">
@@ -67,3 +67,4 @@
   </div>
 </body>
 </html>
+
